implemented qetQueryParam method